fix alignment

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -466,6 +466,9 @@ a:hover, a:active, a:focus {
 
 #projects .projects-thumb {
   padding: 52px 22px;
+  flex-direction: column;
+  justify-content: space-between; /* aligns the content within the column */
+  flex: 1; /* makes sure each project takes up the same amount of space */
 }
 
 #projects .projects-thumb .fa {
@@ -487,14 +490,12 @@ a:hover, a:active, a:focus {
 #projects .row {
   display: flex;
   flex-wrap: wrap; /* ensures wrapping on smaller screens */
+  justify-content: space-between;
   align-items: stretch; /* ensures all items are of equal height */
 }
 
 #projects .projects-thumb a {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* aligns the content within the column */
-  flex: 1; /* makes sure each project takes up the same amount of space */
+  display: block-inline;
   text-transform: uppercase;
   font-weight: bold;
   text-decoration: none;
@@ -512,9 +513,9 @@ a:hover, a:active, a:focus {
 
 #experience .experience-img {
   background: url('../images/experience-img.jpg') no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: bottom;
-  max-width: 90%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -543,6 +544,9 @@ a:hover, a:active, a:focus {
 #education .education-img {
   background: url('../images/education-img.jpg') no-repeat;
   background-position: bottom center;
+  background-size: cover;
+  max-width: 100%;
+  height: auto;
 }
 
 #education .media-heading {
@@ -761,6 +765,10 @@ footer {
     background-position: 65% 40%; /* Keep the image centered */
     height: auto; /* Adjust the height dynamically */
     min-height: 50vh; /* Optional: Control height for smaller screens */
+  }
+
+  #projects .row {
+    flex-direction: column; /* This ensures vertical stacking */
   }
 
   #home .container,
